--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "electron-webpack": "*",
     "file-icon-vectors": "^1.0.0",
     "lodash": "^4.17.21",
-    "react-pdf": "^5.3.2"
+    "pdfjs-dist": "^2.6.347",
+    "react-pdf": "^5.3.2",
+    "worker-loader": "^3.0.8"
   },
   "repository": {
     "type": "git",
