--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "A simple highlighter/cropper/notetaker for PDFs. Designed to move my physical workflow (printed pages, highlighters and pens) into a digital context.",
   "main": "main.js",
   "devDependencies": {
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
     "css-loader": "^3.6.0",
     "electron": "*",
     "electron-webpack": "*",
     "file-icon-vectors": "^1.0.0",
     "lodash": "^4.17.21",
-    "pdfjs-dist": "^2.6.347",
-    "react-pdf": "^5.3.2",
+    "pdfjs-dist": "^2.2.228",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "webpack": "*",
     "worker-loader": "^3.0.8"
   },
   "repository": {
@@ -50,7 +55,6 @@
     "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null"
   },
   "dependencies": {
-    "@babel/preset-react": "^7.14.5",
     "electron": "^14.0.1"
   }
 }
