--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "devDependencies": {
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "annotpdf": "^1.0.14",
     "css-loader": "^3.6.0",
     "electron": "*",
+    "electron-context-menu": "^3.1.1",
     "electron-webpack": "*",
     "file-icon-vectors": "^1.0.0",
+    "file-type": "^16.5.3",
     "lodash": "^4.17.21",
     "pdfjs-dist": "^2.2.228",
     "prop-types": "^15.7.2",
