--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "file-icon-vectors": "^1.0.0",
     "file-type": "^16.5.3",
     "lodash": "^4.17.21",
+    "pdfassembler": "*",
     "pdfjs-dist": "^2.2.228",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
