--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.0.1",
   "description": "A simple highlighter/cropper/notetaker for PDFs. Designed to move my physical workflow (printed pages, highlighters and pens) into a digital context.",
   "main": "main.js",
+  "@comment devDependencies": {
+    "annotpdf": "^1.0.14",
+    "pdfassembler": "*"
+  },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
-    "annotpdf": "^1.0.14",
+    "babel-loader": "^8.2.2",
     "css-loader": "^3.6.0",
     "electron": "*",
     "electron-context-menu": "^3.1.1",
@@ -14,7 +20,6 @@
     "file-icon-vectors": "^1.0.0",
     "file-type": "^16.5.3",
     "lodash": "^4.17.21",
-    "pdfassembler": "*",
     "pdfjs-dist": "^2.2.228",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -49,7 +54,8 @@
     },
     "renderer": {
       "sourceDirectory": "src/renderer",
-      "template": "static/index.html"
+      "template": "static/index.html",
+      "webpackConfig": "custom.webpack.additions.js"
     }
   },
   "scripts": {
