--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "A simple highlighter/cropper/notetaker for PDFs. Designed to move my physical workflow (printed pages, highlighters and pens) into a digital context.",
   "main": "main.js",
   "@comment devDependencies": {
-    "annotpdf": "^1.0.14",
-    "pdfassembler": "*"
+    "annotpdf": "^1.0.14"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
@@ -20,6 +18,8 @@
     "file-icon-vectors": "^1.0.0",
     "file-type": "^16.5.3",
     "lodash": "^4.17.21",
+    "pdf-lib": "^1.16.0",
+    "pdfassembler": "*",
     "pdfjs-dist": "^2.2.228",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
