--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "A simple highlighter/cropper/notetaker for PDFs. Designed to move my physical workflow (printed pages, highlighters and pens) into a digital context.",
   "main": "main.js",
   "@comment devDependencies": {
-    "annotpdf": "^1.0.14"
+    "pdfassembler": "*",
+    "pdf-lib": "^1.16.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "annotpdf": "^1.0.14",
     "babel-loader": "^8.2.2",
     "css-loader": "^3.6.0",
     "electron": "*",
@@ -18,13 +20,12 @@
     "file-icon-vectors": "^1.0.0",
     "file-type": "^16.5.3",
     "lodash": "^4.17.21",
-    "pdf-lib": "^1.16.0",
-    "pdfassembler": "*",
     "pdfjs-dist": "^2.2.228",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "webpack": "*",
+    "sass": "*",
+    "sass-loader": "10",
     "worker-loader": "^3.0.8"
   },
   "repository": {
