I'm in deep now. pdf-lib is the only decent raw parser. Going to try to manipulate the tree next time.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "@comment devDependencies": {
     "pdfassembler": "*",
-    "pdf-lib": "^1.16.0"
+    "pdf-annotate": "*"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.15.0",
@@ -20,6 +20,7 @@
     "file-icon-vectors": "^1.0.0",
     "file-type": "^16.5.3",
     "lodash": "^4.17.21",
+    "pdf-lib": "^1.16.0",
     "pdfjs-dist": "^2.2.228",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
