--- a/default-pdf-settings.json
+++ b/default-pdf-settings.json
@@ -45,7 +45,7 @@
     },
     {
       "name": "Concurrences / Cites",
-      "color": "#deeed4",
+      "color": "#9dc19a",
       "opacity": 0.5,
       "type": "HIGHLIGHT"
     },
